Fixed some layout issues for mobile

--- a/style.css
+++ b/style.css
@@ -43,25 +43,30 @@ body {
 }
 
 .projects {
-  margin: 20px;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
+  display:block;
+  margin-left: 50%;
+  margin-right: auto;
 }
+
 
 .projects ul {
     list-style-type: none;
-    width: 70%;
-    margin: auto;
     padding: 0;
+    margin-left: -175px;
     width: 350px;
     background-color: #f1f1f1;
     text-align: center;
+
 }
 
 .projects li a {
     display: block;
     color: #000;
-    padding: 8px 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
     text-decoration: none;
+
 }
 
 /* Change the link color on hover */
